[tool.poetry]
name = "cron_repo"
version = "0.1.0"
description = ""
authors = ["lynxlevin <72173230+lynxlevin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
